client/src/components/NavBar.css
nav{
    position: fixed;
    width: 100%;
    padding: 0 5%; 
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    z-index: 999;
    height: 70px;
    color: black;
    background-color: white;
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
}

nav a{
    text-transform: none;
    color: black;
}

nav .icons > *,
nav a,
nav .menuButton{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 30px;
    background-color: #d9d9d9;
    padding: .7vw;
    font-weight: 800;
    font-size: 1rem;
    cursor: pointer;
    transition: .5s all ease;
    overflow: hidden;
    white-space: nowrap;
    box-shadow: 0 0 5px black;
    flex-shrink: 0;
}

nav .icons > *:hover{
    transform: scale(1.1);
}

nav .icons{
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    gap: 1vw;
    padding: 10px;
    border-radius: 30px;
    transition: background-color .5s ease;
    width: fit-content;
}

nav .icons:hover{
    background-color: rgba(255,255,255,0.1);
}

nav .icons > a > p{
    display:none;
}

nav .menuButton{
    display: none;
    z-index: 101;
}

nav .overlay{
    display: block;
    position: absolute;
    width: 100vw;
    height: 100vh;
    top: 0;
    left: 0;
    background-color: rgba(0,0,0,0.1);
    backdrop-filter: blur(1px);
    padding: 0;
    opacity: 0;
    z-index: 99;
    transform: scale(2);
    transition: all 1s ease;
}

nav .mainboard *{color: #480101;}
nav .cpu *{color: #024a08;}
nav .gpu *{color:#36a44d ;}
nav .disks *{color: #4b3302 ;}
nav .memory *{color: #759704;}
nav .connection *{color: #047c7e;}
nav .advanced *{color: black;}

@media screen and (max-width: 1250px) {

    nav {
        justify-content: flex-end;
        background-color: rgba(0, 0, 0,0);
        box-shadow: none;
    }

    nav .menuButton{
        display: block;
        right: 0;
        opacity: 1;
        padding: 10px;
    }

    nav .icons{
        position: fixed;
        flex-direction: column;
        align-items: flex-start;
        height: 80vh;
        background-color: rgba(217, 217, 217, 0.5);
        backdrop-filter: blur(5px);
        gap: 5px;
        width:150px;
        padding: 10px 20px;
        right: 80px;
        z-index: 100;
        top: 30px;
        transition: background-color .5s ease, right .5s ease;
    }

    nav .icons:hover{
        background-color: rgba(217, 217, 217, 0.5);
    }

    nav .icons > a{
        background-color: rgba(217, 217, 217, 0.5);
        transform: scale(1.1);
    }

    nav .icons > a{
        display: flex;
        justify-content: center;
        align-items: center;
        text-decoration: none;
        font-weight: 600;
        font-size: 1rem;
        gap: 10px;
        padding: 0px 10px;
        box-shadow: 0 0 5px rgba(0, 0, 0,0.1);
    }

    nav .icons > .github{
        align-self: center;
    }

    nav .icons > a > p{
        display: block;
    }

    nav .icons > a:hover{
        transform: scale(1.2);
    }
}

